<resources>
    <string name="app_name">MyList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lista_de_invitados">Lista de invitados</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="localidad">Localidad</string>
    <string name="correo">Correo</string>
    <string name="parentezco">Parentezco</string>
    <string name="familiar">Familiar</string>
    <string name="amigo">Amigo</string>
    <string name="role">Role</string>
    <string name="invitado">Invitado</string>
    <string name="padrino">Padrino</string>
    <string name="table">Mesa</string>

    <string name="total_invitados">Total Invitados: %s</string>
    <string name="num_invitados_presentes">Llegaron: %s</string>
    <string name="num_invitados_faltantes">Faltan: %s</string>
    <string name="acompa_antes_de_esta_mesa">Acompañantes de esta mesa</string>

    <string-array name="padrino_de">
        <item>Alcohol</item>
        <item>Anillos</item>
        <item>Brindis</item>
        <item>Misa</item>
        <item>Lazo</item>
        <item>Traje</item>
        <item>Luna de miel</item>
    </string-array>

    <string-array name="numero_mesas">
        <item>Número 01</item>
        <item>Número 02</item>
        <item>Número 03</item>
        <item>Número 04</item>
        <item>Número 05</item>
        <item>Número 06</item>
        <item>Número 07</item>
        <item>Número 08</item>
        <item>Número 09</item>
        <item>Número 10</item>
        <item>Número 11</item>
        <item>Número 12</item>
        <item>Número 13</item>
        <item>Número 14</item>
        <item>Número 15</item>
        <item>Número 16</item>
        <item>Número 17</item>
        <item>Número 18</item>
        <item>Número 19</item>
        <item>Número 20</item>
        <item>Número 21</item>
    </string-array>
</resources>