<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/bg"
            android:fillViewport="true"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:progress="20" />

                <TextView
                    android:id="@+id/tvProgreso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/progress_circular"
                    app:layout_constraintEnd_toEndOf="@+id/progress_circular"
                    app:layout_constraintStart_toStartOf="@+id/progress_circular"
                    app:layout_constraintTop_toTopOf="@+id/progress_circular"
                    tools:text="50%" />

                <ImageView
                    android:id="@+id/imgRole"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_user"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/tvProgreso"
                    app:layout_constraintEnd_toEndOf="@+id/tvProgreso"
                    app:layout_constraintStart_toStartOf="@+id/tvProgreso"
                    app:layout_constraintTop_toTopOf="@+id/tvProgreso" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNombre"
                    style="@style/TILStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/nombre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress_circular">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLength="50" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTelefono"
                    style="@style/TILStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/telefono"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilNombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLocalidad"
                    style="@style/TILStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/localidad"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilTelefono">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieLocalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLength="50" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCorreo"
                    style="@style/TILStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/correo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilLocalidad">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvParentezco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/parentezco"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/tilCorreo"
                    app:layout_constraintTop_toBottomOf="@+id/tilCorreo" />

                <RadioGroup
                    android:id="@+id/rgParentezco"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvParentezco">

                    <RadioButton
                        android:id="@+id/rbFamilia"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/selector_radio"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:text="@string/familiar"
                        android:textColor="@drawable/selector_color" />

                    <RadioButton
                        android:id="@+id/rbAmigo"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/selector_radio"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:text="@string/amigo"
                        android:textColor="@drawable/selector_color" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/role"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="@+id/tilCorreo"
                    app:layout_constraintTop_toBottomOf="@+id/rgParentezco" />

                <RadioGroup
                    android:id="@+id/rgRole"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvRole">

                    <RadioButton
                        android:id="@+id/rbInvitado"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/selector_radio"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:text="@string/invitado"
                        android:textColor="@drawable/selector_color" />

                    <RadioButton
                        android:id="@+id/rbPadrino"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/selector_radio"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="10dp"
                        android:text="@string/padrino"
                        android:textColor="@drawable/selector_color" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilOpciones"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    app:boxCornerRadiusTopStart="14dp"
                    app:boxCornerRadiusTopEnd="14dp"
                    app:boxCornerRadiusBottomStart="14dp"
                    app:boxCornerRadiusBottomEnd="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rgRole"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/spOpciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:hint="Seleccione..."/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_btn"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>